--- a/styles/place.css
+++ b/styles/place.css
@@ -4,11 +4,11 @@
 }
 
 body {
-    font-family: Playfair Display, sans-serif;
+    font-family: "Playfair Display", sans-serif;
     display: flex;
     flex-direction: column;
-    margin: auto;
-    height: 100%;
+    margin: 0; 
+    min-height: 100vh; 
 }
 
 header {
