--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -6,7 +6,7 @@
 @media screen and (min-width: 750px) {
     body {
         position: relative;
-        font-family: Playfair Display;
+        font-family: "Playfair Display";
         font-weight: 600;
     }
 
